# tailor-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
res/: backpack.toml  edge_slot.toml  lib_snmp.toml  zephyr.toml
res/blinky/: Tailor.toml
src/: cmake.rs  dependency_manager.rs  lib.rs  main.rs  manifest.rs  manifest_metadata.rs  templates.rs
src/cmds/: build.rs  new.rs
tests/: cmd_new.rs
