[package]
name = "tailor"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.11.1"
chrono = "0.4.39"
test-context = "0.3.0"
sha2 = "0.10.8"
hex = "0.4.3"
num_cpus = "1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rand = "0.8.5"
